fix: search bar overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,6 @@ main h1 {
 main > search {
   text-align: center;
   height: 2em;
-  width: 100%;
   padding: 1em;
 }
 
